--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,4 @@
 cmake_minimum_required (VERSION 3.13.4)
 
-add_executable (fly_by_knight fly_by_knight.c)
-target_link_libraries(fly_by_knight "${FAREWELL_TO_KING_LIB}")
-target_link_libraries(fly_by_knight "${FAREWELL_TO_KING_STRINGS_LIB}")
+add_executable (fly_by_knight fly_by_knight.c fly_by_knight_io.c)
+target_link_libraries(fly_by_knight Threads::Threads farewell_to_king_strings farewell_to_king)
