cmake debug symbols by defaul

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,11 @@
 cmake_minimum_required (VERSION 3.13.4)
 project (fly_by_knight)
 
-option (BUILD_TEST "Build executable to test Fly by Knight." ON)
+option (BUILD_DEBUG "Build Fly by Knight with debug symbols enabled." ON)
+
+if(BUILD_DEBUG)
+  set(CMAKE_BUILD_TYPE Debug)
+endif(BUILD_DEBUG)
 
 subdirs(src)
 set(HEADERS "${CMAKE_SOURCE_DIR}/include")
