--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,14 @@ if(BUILD_DEBUG)
   set(CMAKE_BUILD_TYPE Debug)
 endif(BUILD_DEBUG)
 
+if (MSVC)
+    # warning level 4 and all warnings as errors
+    add_compile_options(/W4 /WX)
+else()
+    # lots of warnings and all warnings as errors
+    add_compile_options(-Wall -Wextra -pedantic -Werror)
+endif()
+
 subdirs(src)
 set(HEADERS "${CMAKE_SOURCE_DIR}/include")
 include_directories(${HEADERS})
