--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,7 +23,7 @@ stages:          # List of stages for jobs, and their order of execution
 .apt_dependencies: &apt_dependencies
   - echo "Installing dependencies..."
   - apt update
-  - apt install -y --no-install-recommends gcc g++ make cmake git openssh-client
+  - apt install -y --no-install-recommends gcc g++ make cmake git
   - echo "Installing dependencies complete."
 
 .build_step: &build_step
@@ -88,7 +88,7 @@ fedora:
   image: fedora:latest
   script:
     - echo "Installing dependencies..."
-    - dnf install -y gcc gcc-c++ cmake git openssh
+    - dnf install -y gcc gcc-c++ cmake git
     - echo "Installing dependencies complete."
     - *build_step
   artifacts:
