--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "lib/farewell-to-king"]
   path = lib/farewell-to-king
-  url = git@git.sandorlaboratories.com:edward/farewell-to-king.git
+  url = https://git.sandorlaboratories.com/edward/farewell-to-king.git
   branch = main
