Reorganizing analysis logic

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ endif()
 
 add_executable(flybyknight  src/fly_by_knight.c 
                               src/fly_by_knight_analysis.c
+                              src/fly_by_knight_analysis_worker.c
                               src/fly_by_knight_debug.c
                               src/fly_by_knight_io.c
                               src/fly_by_knight_move_tree.c
