Logic to compress node children

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,5 +34,7 @@ endif()
 
 find_package(Threads REQUIRED)
 target_link_libraries(flybyknight PRIVATE Threads::Threads)
+find_package(ZLIB REQUIRED)
+target_link_libraries(flybyknight PRIVATE ZLIB::ZLIB)
 
 install(TARGETS flybyknight)
