Reenable format compile warning, but remove error.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,8 +11,8 @@ add_compile_options(-Wall -Wextra -pedantic -Werror)
 
 if(MINGW)
 # MinGW breaks many printf functions due to int size differences.  Disable these warning for now..."
-message(WARNING "MINGW Detected: Disabling C string format warnings...")
-add_compile_options(-Wformat=0)
+message(WARNING "MINGW Detected: Disabling C string format warning errors...")
+add_compile_options(-Wno-error=format)
 endif()
 
 add_executable(flybyknight  src/fly_by_knight.c 
